# piecewise-linear

./: .travis.yml  Cargo.toml  README.md  aliases.js  crates.js  help.html  index.md  search-index.js  settings.html  source-files.js
.github/workflows/: docs.yml  tests.yml
doc/: search-index.js
doc/implementors/piecewise_linear/: trait.CoordinateType.js
doc/piecewise_linear/: all.html  enum.ExpandDomainStrategy.html  fn.points_of_inflection_iter.html  fn.sum.html  index.html  sidebar-items.js  struct.Coordinate.html  struct.Line.html  struct.LineString.html  struct.PiecewiseLinearFunction.html  struct.Point.html  struct.PointsOfInflectionIterator.html  struct.SegmentsIterator.html  trait.CoordinateType.html
doc/src/piecewise_linear/: lib.rs.html
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/convert/: trait.From.js  trait.Into.js  trait.TryFrom.js
implementors/core/fmt/: trait.Debug.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  (+4 more)
implementors/geo_types/: trait.CoordinateType.js
piecewise_linear/: all.html  enum.ExpandDomainStrategy.html  fn.line_in_domain.html  fn.points_of_inflection_iter.html  fn.sum.html  index.html  sidebar-items.js  struct.Coord.html  struct.Coordinate.html  struct.Line.html  struct.LineString.html  struct.PiecewiseLinearFunction.html  struct.Point.html  struct.PointsOfInflectionIterator.html  struct.SegmentsIterator.html  trait.CoordFloat.html  trait.CoordinateType.html
src/: lib.rs
src/piecewise_linear/: lib.rs.html
(+13 files in other folders)
