[package]
name = "piecewise-linear"
version = "0.1.0"
authors = ["Matthieu Felix <matthieufelix@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
documentation = "https://mattx.github.io/piecewise-linear/doc/piecewise_linear/"
homepage = "https://mattx.github.io/piecewise-linear/"
repository = "https://github.com/MattX/piecewise-linear"
description = "A library for manipulating piecewise linear functions"
categories = ["data-structure", "science"]
keywords = ["math"]

[dependencies]
geo = "0.26.0"
num-traits = "0.2.8"
serde = { version = "1.0", optional = true, features = ["derive"] }

[features]
default = []
use-serde = ["serde", "geo/use-serde"]
